# interviewsbot

./: pyproject.toml
interviews/: bot.py
interviews/cogs/commands/: admin.py  queue.py  staff.py
interviews/cogs/interactions/: queue.py
interviews/utils/: strings.py
