[tool.poetry]
name = "interviews"
version = "0.0.1"
description = ""
license = "Unlicense"
authors = [
    "Snaacky <snaacky@pm.me>"
]
maintainers = [
    "Snaacky <snaacky@pm.me>"
]
readme = "README.md"
repository = "https://github.com/Snaacky/interviewsbot"

[tool.poetry.dependencies]
asyncpraw = "7.5.0"
coloredlogs = "15.0.1"
dataset = "1.5.2"
mysqlclient = "2.1.0"
parsedatetime = "2.6"
pyaml_env = "^1.1.3"
python = "^3.10"
sqlalchemy-utils = "0.38.2"
py-cord = "2.0.0rc1"
aiodns = { version = "3.0.0", optional = true }
Brotlipy = { version = "0.7.0", optional = true }
cchardet = { version = "2.1.7", optional = true }
orjson = { version = "3.7.0", optional = true }


[tool.poetry.dev-dependencies]
black = ">=22.3.0"
flake8 = "^4.0.1"

[tool.black]
line-length = 120

[tool.poetry.extras]
orjson = ["orjson"]
aiodns = ["aiodns"]
Brotlipy = ["Brotlipy"]
cchardet = ["cchardet"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
